--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/Bantama/CuePlan/favicon-32x32.png">
   
   <title>Frontend Mentor | Order summary card</title>
  <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 <body>
   <div class="contain">
     <div class="hero">
-      <img src="images/illustration-hero.svg" alt="">
+      <img src="CuePlan/illustration-hero.svg" alt="">
     </div>
     <div class="text-part">
       <h2 class="title">Order Summary</h2>
@@ -22,7 +22,7 @@
         <div class="price">
           <div class="price-left">
             <div>
-              <img src="images/icon-music.svg" alt="">
+              <img src="CuePlan/icon-music.svg" alt="">
             </div>
             <div>
               <h5>Annual Plan</h5>
