--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="contain">
     <div class="hero">
-      <img src="CuePlan/illustration-hero.svg" alt="">
+      <img src="illustration-hero.svg" alt="">
     </div>
     <div class="text-part">
       <h2 class="title">Order Summary</h2>
@@ -22,7 +22,7 @@
         <div class="price">
           <div class="price-left">
             <div>
-              <img src="CuePlan/icon-music.svg" alt="">
+              <img src="icon-music.svg" alt="">
             </div>
             <div>
               <h5>Annual Plan</h5>
