--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="price">
           <div class="price-left">
             <div>
-              <img src="https://github.com/Bantama/CuePlan/blob/main/icon-music.svg" alt="">
+              <img src="Bantama/CuePlan/blob/main/icon-music.svg" alt="">
             </div>
             <div>
               <h5>Annual Plan</h5>
